name:                say
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/fpco/say#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
copyright:           2016 FP Complete
category:            Text
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Say
  build-depends:       base >= 4.3 && < 5
                     , bytestring >= 0.10.4
                     , text >= 1.2
                     , transformers
  default-language:    Haskell2010

test-suite say-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SaySpec
  build-depends:       base
                     , bytestring
                     , hspec
                     , say
                     , temporary
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark say-bench
  type:                exitcode-stdio-1.0
  main-is:             say-bench.hs
  hs-source-dirs:      bench
  build-depends:       base
                     , bytestring
                     , criterion
                     , say
                     , temporary
                     , text
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/say
